# hoplite-sat

./: CMakeLists.txt  README.md  conanfile.py
demos/: CMakeLists.txt  conanfile.py
demos/applications/: sat-core.cpp
include/: astreaus-telemetry.hpp
include/libhal-/: astreus.hpp
include/sat-core/: sat-core.hpp
include/telemetry-recorder/: telemetry-recorder.hpp
src/: astreus.cpp  sat-core.cpp  satCoretest.cpp  telemetry-recorder.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
tests/: .test.cpp  CMakeLists.txt  main.test.cpp  sat-core.cpp  telemetry-recorder.cpp
